[gd_scene load_steps=5 format=3 uid="uid://r2fsp6nqqrig"]

[ext_resource type="Script" path="res://Feature.gd" id="1_qesbp"]
[ext_resource type="Texture2D" uid="uid://mrtuxxullwkh" path="res://Assets/UI/Divider.svg" id="2_ldgu0"]
[ext_resource type="Texture2D" uid="uid://bb8p1rufyc135" path="res://Assets/UI/PlusIcon.svg" id="5_upf7y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p5ccu"]

[node name="Feature" type="GraphNode" groups=["nodes"]]
anchors_preset = -1
anchor_bottom = -0.209259
offset_left = 18.0
offset_top = 42.0
offset_right = 229.0
offset_bottom = 404.0
title = "GramercyHeights"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_qesbp")
metadata/_edit_use_anchors_ = true

[node name="Feature" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Feature"]
layout_mode = 2
text = "Select feature"

[node name="OptionButton" type="OptionButton" parent="Feature"]
layout_mode = 2
item_count = 3
popup/item_0/text = "Set variables"
popup/item_0/id = 0
popup/item_1/text = "Emit signal"
popup/item_1/id = 1
popup/item_2/text = "Conditionals"
popup/item_2/id = 2

[node name="VariablesGroup" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Divider" type="TextureRect" parent="VariablesGroup"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ldgu0")
stretch_mode = 2

[node name="Title" type="HBoxContainer" parent="VariablesGroup"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="VariablesGroup/Title"]
layout_mode = 2
text = "Set Variables"

[node name="AddVarButton" type="Button" parent="VariablesGroup/Title"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_p5ccu")
icon = ExtResource("5_upf7y")

[node name="EmitSignalGroup" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Divider" type="TextureRect" parent="EmitSignalGroup"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ldgu0")
stretch_mode = 2

[node name="Title" type="HBoxContainer" parent="EmitSignalGroup"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="EmitSignalGroup/Title"]
layout_mode = 2
text = "Emit Signal"

[node name="AddSignalButton" type="Button" parent="EmitSignalGroup/Title"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_p5ccu")
icon = ExtResource("5_upf7y")

[node name="ConditionalsGroup" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Divider" type="TextureRect" parent="ConditionalsGroup"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ldgu0")
stretch_mode = 2

[node name="Title" type="HBoxContainer" parent="ConditionalsGroup"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="ConditionalsGroup/Title"]
layout_mode = 2
text = "Conditionals"

[node name="AddConditionalButton" type="Button" parent="ConditionalsGroup/Title"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_p5ccu")
icon = ExtResource("5_upf7y")

[connection signal="_cancel_button_pressed" from="." to="." method="_on_cancel_button_pressed"]
[connection signal="close_request" from="." to="." method="_on_close_request" flags=18]
[connection signal="resize_request" from="." to="." method="_on_resize_request" flags=18]
[connection signal="slot_updated" from="." to="." method="_on_slot_updated" flags=18]
[connection signal="item_selected" from="Feature/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="VariablesGroup/Title/AddVarButton" to="." method="_on_add_button_pressed" binds= ["variable"]]
[connection signal="pressed" from="EmitSignalGroup/Title/AddSignalButton" to="." method="_on_add_button_pressed" binds= ["signal"]]
[connection signal="pressed" from="ConditionalsGroup/Title/AddConditionalButton" to="." method="_on_add_button_pressed" binds= ["conditional"]]
